# tauri-chat

./: README.md
chat/: .env.development  .env.production  package.json
chat/src/: App.vue  env.d.ts
chat/src-tauri/: Cargo.toml  tauri.conf.json
chat/src-tauri/src/: commands.rs  main.rs
chat/src/assets/icon/: iconfont.css
chat/src/common/: Api.ts  Constans.ts  Request.ts  WindowEvent.ts
chat/src/router/: index.ts
chat/src/script/: ChatDataFlow.ts
chat/src/view/: ChatView.vue  Login.vue  VideoChatView.vue  VideoSelectionView.vue
java/: pom.xml
java-server/chat/: pom.xml
java-server/chat/db/: chat.sql
java-server/chat/src/main/java/cn/zyx/chat/: ChatApplication.java
java-server/chat/src/main/resources/: application-dev.yml  application.yml
java-server/chat/src/main/resources/mapper/chat/: UcAccountMapper.xml  UcAccountRelationMapper.xml
java-server/src/main/java/cn/zyx/chat/: ChatApplication.java
java-server/src/main/java/cn/zyx/chat/config/: CorsConfig.java  WebSocketConfig.java
java-server/src/main/java/cn/zyx/chat/controller/: AccountController.java
java-server/src/main/resources/: application.yml
java/src/main/java/cn/zyx/chat/config/: WebMvcConfig.java
rust-server/: Cargo.toml
rust-server/src/: entity.rs  jwt.rs  main.rs  redis.rs  server.rs  session.rs
tauri/: package-lock.json  package.json
tauri/src/: main.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: commands.rs  main.rs
tauri/src/assets/icon/: iconfont.css
tauri/src/router/: index.ts
tauri/src/view/: ChatView.vue  Login.vue
(+34 files in other folders)
